align dropdowns and search box correctly

--- a/components/ranking.module.css
+++ b/components/ranking.module.css
@@ -1,20 +1,23 @@
 .inputArea {
+	background: var(--color-bg-primary);
+	width: 100%;
+	padding: 0 1rem;
 	position: sticky;
 	top: 4rem;
 	height: 3rem;
-	display: flex;
-	justify-content: space-between;
-	margin: 0;
-	align-items: center;
+	line-height: 3rem;
 	z-index: 2;
-	width: 16rem;
+	display: flex;
+	align-items: center;
 }
 
-.teamSearch {
+.searchDiv {
+	width: 50%;
+	justify-content: flex-end;
+}
+
+.searchInput {
 	font-size: 1rem;
-	/* flex-grow: 1; */
-}
-
-.emptySpace {
-	flex-grow: 1;
+	display: block;
+	float: right;
 }
