--- a/components/selector.module.css
+++ b/components/selector.module.css
@@ -1,5 +1,6 @@
 .selectorStyling {
 	display: flex;
+	width: 50%;
 }
 
 .selectorStyling select {
